--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,7 +12,7 @@ jobs:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
         with:
           # Required: QA Wolf API key from team settings page
-          qawolf-api-key: "${{ secrets.QAWOLF_API_KEY }}"
+          qawolf-api-key: "qawolf_b6a74fab89d14b7cb61269c040d2ab94"
           # Optional: URL of the deployed environment to test
           deployment-url: "${{ needs.deploy-environment.outputs.deployment-url || 'https://example.com' }}"
           # Optional: Environment variables as JSON string
