--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,4 +17,4 @@ jobs:
           deployment-url: "${{ needs.deploy-environment.outputs.deployment-url || 'https://example.com' }}"
           # Optional: Environment variables as JSON string
           variables: '{"YOUR_VARIABLE_NAME": "YOUR_VARIABLE_VALUE"}'
-          qawolf-base-url: "https://5d7a-104-36-45-21.ngrok-free.app"
+          qawolf-base-url: "https://5d17-104-36-45-21.ngrok-free.app"
